--- a/web/package.json
+++ b/web/package.json
@@ -16,6 +16,7 @@
     "@types/react": "^17.0.20",
     "@types/react-dom": "^17.0.9",
     "codegen": "^0.1.0",
+    "dotenv": "^14.2.0",
     "framer-motion": "^5",
     "graphql": "^16.2.0",
     "react": "^17.0.2",
