--- a/server/package.json
+++ b/server/package.json
@@ -27,6 +27,7 @@
     "@nestjs/platform-express": "^8.0.0",
     "@nestjs/typeorm": "^8.0.3",
     "apollo-server-express": "^3.6.2",
+    "argon2": "^0.28.3",
     "dotenv": "^14.2.0",
     "graphql": "^15",
     "mysql2": "^2.3.3",
