--- a/server/package.json
+++ b/server/package.json
@@ -28,8 +28,10 @@
     "@nestjs/typeorm": "^8.0.3",
     "apollo-server-express": "^3.6.2",
     "argon2": "^0.28.3",
+    "cookie-parser": "^1.4.6",
     "dotenv": "^14.2.0",
     "graphql": "^15",
+    "jsonwebtoken": "^8.5.1",
     "mysql2": "^2.3.3",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
@@ -41,8 +43,10 @@
     "@nestjs/cli": "^8.0.0",
     "@nestjs/schematics": "^8.0.0",
     "@nestjs/testing": "^8.0.0",
+    "@types/cookie-parser": "^1.4.2",
     "@types/express": "^4.17.13",
     "@types/jest": "27.0.2",
+    "@types/jsonwebtoken": "^8.5.8",
     "@types/node": "^16.0.0",
     "@types/supertest": "^2.0.11",
     "@typescript-eslint/eslint-plugin": "^5.0.0",
