--- a/server/package.json
+++ b/server/package.json
@@ -33,6 +33,7 @@
     "graphql": "^15",
     "jsonwebtoken": "^8.5.1",
     "mysql2": "^2.3.3",
+    "redis": "^3",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^7.2.0",
