--- a/package.json
+++ b/package.json
@@ -1,5 +1,13 @@
 {
+  "devDependencies": {
+    "@types/cache-manager": "^3.4.2",
+    "@types/connect-redis": "^0.0.18",
+    "@types/nodemailer": "^6.4.4"
+  },
   "dependencies": {
-    "graphql-middleware": "^6.1.13"
+    "@nestjs/microservices": "^8.2.6",
+    "cache-manager": "^3.6.0",
+    "nodemailer": "^6.7.2",
+    "uuidv4": "^6.2.12"
   }
 }
