--- a/server/package.json
+++ b/server/package.json
@@ -24,16 +24,19 @@
     "@nestjs/common": "^8.0.0",
     "@nestjs/core": "^8.0.0",
     "@nestjs/graphql": "^9.1.2",
+    "@nestjs/microservices": "^8.2.6",
     "@nestjs/platform-express": "^8.0.0",
     "@nestjs/typeorm": "^8.0.3",
     "apollo-server-express": "^3.6.2",
     "argon2": "^0.28.3",
+    "connect-redis": "^6.0.0",
     "cookie-parser": "^1.4.6",
     "dotenv": "^14.2.0",
+    "express-session": "^1.17.2",
     "graphql": "^15",
     "jsonwebtoken": "^8.5.1",
     "mysql2": "^2.3.3",
-    "redis": "^3",
+    "redis": "^4.0.2",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^7.2.0",
@@ -46,6 +49,7 @@
     "@nestjs/testing": "^8.0.0",
     "@types/cookie-parser": "^1.4.2",
     "@types/express": "^4.17.13",
+    "@types/express-session": "^1.17.4",
     "@types/jest": "27.0.2",
     "@types/jsonwebtoken": "^8.5.8",
     "@types/node": "^16.0.0",
