--- a/server/package.json
+++ b/server/package.json
@@ -22,6 +22,7 @@
   },
   "dependencies": {
     "@nestjs/common": "^8.0.0",
+    "@nestjs/config": "^1.2.0",
     "@nestjs/core": "^8.0.0",
     "@nestjs/graphql": "^9.1.2",
     "@nestjs/microservices": "^8.2.6",
@@ -29,6 +30,7 @@
     "@nestjs/typeorm": "^8.0.3",
     "apollo-server-express": "^3.6.2",
     "argon2": "^0.28.3",
+    "cache-manager": "^3.6.0",
     "connect-redis": "^6.0.0",
     "cookie-parser": "^1.4.6",
     "dotenv": "^14.2.0",
@@ -36,6 +38,7 @@
     "graphql": "^15",
     "jsonwebtoken": "^8.5.1",
     "mysql2": "^2.3.3",
+    "nodemailer": "^6.7.2",
     "redis": "^4.0.2",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
@@ -47,12 +50,14 @@
     "@nestjs/cli": "^8.0.0",
     "@nestjs/schematics": "^8.0.0",
     "@nestjs/testing": "^8.0.0",
+    "@types/cache-manager": "^3.4.3",
     "@types/cookie-parser": "^1.4.2",
     "@types/express": "^4.17.13",
     "@types/express-session": "^1.17.4",
     "@types/jest": "27.0.2",
     "@types/jsonwebtoken": "^8.5.8",
     "@types/node": "^16.0.0",
+    "@types/nodemailer": "^6.4.4",
     "@types/supertest": "^2.0.11",
     "@typescript-eslint/eslint-plugin": "^5.0.0",
     "@typescript-eslint/parser": "^5.0.0",
