--- a/web/package.json
+++ b/web/package.json
@@ -24,9 +24,12 @@
     "react": "^17.0.2",
     "react-awesome-reveal": "^3.8.1",
     "react-dom": "^17.0.2",
+    "react-icons": "^4.3.1",
     "react-redux": "^7.2.6",
     "react-router-dom": "6",
     "react-scripts": "5.0.0",
+    "react-toastify": "^8.2.0",
+    "sass": "^1.49.9",
     "typescript": "^4.4.2",
     "urql": "^2.0.6",
     "web-vitals": "^2.1.0"
