--- a/web/tsconfig.json
+++ b/web/tsconfig.json
@@ -1,10 +1,10 @@
 {
   "compilerOptions": {
-    "target": "es5",
+    "target": "ES5",
     "lib": [
       "dom",
       "dom.iterable",
-      "esnext"
+      "ES2015"
     ],
     "allowJs": true,
     "skipLibCheck": true,
