--- a/web/package.json
+++ b/web/package.json
@@ -16,6 +16,7 @@
     "@types/node": "^16.7.13",
     "@types/react": "^17.0.20",
     "@types/react-dom": "^17.0.9",
+    "@urql/exchange-auth": "^0.1.7",
     "codegen": "^0.1.0",
     "dotenv": "^14.2.0",
     "formik": "^2.2.9",
