--- a/server/package.json
+++ b/server/package.json
@@ -5,6 +5,10 @@
   "author": "",
   "private": true,
   "license": "UNLICENSED",
+  "engines": {
+    "npm": ">=8.5.1",
+    "node": ">=15.6.0"
+  },
   "scripts": {
     "prebuild": "rimraf dist",
     "build": "nest build",
