--- a/web/package.json
+++ b/web/package.json
@@ -31,7 +31,7 @@
     "react-scripts": "5.0.0",
     "react-toastify": "^8.2.0",
     "sass": "^1.49.9",
-    "typescript": "^4.4.2",
+    "typescript": "^4.6.2",
     "urql": "^2.0.6",
     "web-vitals": "^2.1.0"
   },
@@ -41,7 +41,9 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "generate": "graphql-codegen",
-    "gen": "graphql-codegen --config codegen.yml"
+    "gen": "graphql-codegen --config codegen.yml",
+    "dev": "webpack-dev-server",
+    "compile": "tsc src/*.tsx"
   },
   "eslintConfig": {
     "extends": [
@@ -62,10 +64,23 @@
     ]
   },
   "devDependencies": {
+    "@babel/core": "^7.17.5",
+    "@babel/plugin-proposal-class-properties": "^7.16.7",
+    "@babel/plugin-syntax-dynamic-import": "^7.8.3",
+    "@babel/preset-env": "^7.16.11",
+    "@babel/preset-react": "^7.16.7",
     "@graphql-codegen/cli": "2.4.0",
     "@graphql-codegen/introspection": "2.1.1",
     "@graphql-codegen/typescript": "2.4.2",
     "@graphql-codegen/typescript-operations": "2.2.2",
-    "@graphql-codegen/typescript-react-apollo": "3.2.4"
+    "@graphql-codegen/typescript-react-apollo": "3.2.4",
+    "babel-loader": "^8.2.3",
+    "css-loader": "^6.7.0",
+    "html-webpack-plugin": "^5.5.0",
+    "style-loader": "^3.3.1",
+    "ts-loader": "^9.2.7",
+    "webpack": "^5.70.0",
+    "webpack-cli": "^4.9.2",
+    "webpack-dev-server": "^4.7.4"
   }
 }
