--- a/web/tsconfig.json
+++ b/web/tsconfig.json
@@ -20,10 +20,10 @@
     "noEmit": true,
     "noUnusedLocals": false,
     "noUnusedParameters": false,
-    "jsx": "react-jsx"
+    "jsx": "react-jsx",
+    "outDir": "./dist/"
   },
   "include": [
-    "src" , 
-    
+    "src",
   ]
 }
