--- a/server/package.json
+++ b/server/package.json
@@ -35,6 +35,7 @@
     "@nestjs/microservices": "^8.2.6",
     "@nestjs/platform-express": "^8.0.0",
     "@nestjs/typeorm": "^8.0.3",
+    "@urql/exchange-graphcache": "^4.3.6",
     "apollo-server-express": "^3.6.2",
     "argon2": "^0.28.3",
     "cache-manager": "^3.6.0",
