--- a/web/package.json
+++ b/web/package.json
@@ -17,6 +17,8 @@
     "@types/react": "^17.0.20",
     "@types/react-dom": "^17.0.9",
     "@urql/exchange-auth": "^0.1.7",
+    "@urql/exchange-graphcache": "^4.3.6",
+    "add": "^2.0.6",
     "codegen": "^0.1.0",
     "dotenv": "^14.2.0",
     "formik": "^2.2.9",
@@ -33,7 +35,8 @@
     "sass": "^1.49.9",
     "typescript": "^4.6.2",
     "urql": "^2.0.6",
-    "web-vitals": "^2.1.0"
+    "web-vitals": "^2.1.0",
+    "yarn": "^1.22.17"
   },
   "scripts": {
     "start": "react-scripts start",
