--- a/web/package.json
+++ b/web/package.json
@@ -29,6 +29,7 @@
     "react-dom": "^17.0.2",
     "react-icons": "^4.3.1",
     "react-redux": "^7.2.6",
+    "react-reveal": "^1.2.2",
     "react-router-dom": "6",
     "react-scripts": "5.0.0",
     "react-toastify": "^8.2.0",
