--- a/server/package.json
+++ b/server/package.json
@@ -36,6 +36,8 @@
     "@nestjs/platform-express": "^8.0.0",
     "@nestjs/typeorm": "^8.0.3",
     "@urql/exchange-graphcache": "^4.3.6",
+    "amqp-connection-manager": "^4.1.1",
+    "amqplib": "^0.8.0",
     "apollo-server-express": "^3.6.2",
     "argon2": "^0.28.3",
     "cache-manager": "^3.6.0",
