--- a/web/package.json
+++ b/web/package.json
@@ -36,6 +36,7 @@
     "sass": "^1.49.9",
     "typescript": "^4.6.2",
     "urql": "^2.0.6",
+    "uuid": "^8.3.2",
     "web-vitals": "^2.1.0",
     "yarn": "^1.22.17"
   },
@@ -78,6 +79,7 @@
     "@graphql-codegen/typescript": "2.4.2",
     "@graphql-codegen/typescript-operations": "2.2.2",
     "@graphql-codegen/typescript-react-apollo": "3.2.4",
+    "@types/uuid": "^8.3.4",
     "babel-loader": "^8.2.3",
     "css-loader": "^6.7.0",
     "html-webpack-plugin": "^5.5.0",
