hover card logic

--- a/web/src/config/config.json
+++ b/web/src/config/config.json
@@ -30,6 +30,8 @@
                     "title" : "HC4"
                 } 
             }
-        ]
+        ],
+        "tagline" : "Be a Maverick" ,
+        "product-name": "Logan Store"
     }
 }
