--- a/web/src/config/config.json
+++ b/web/src/config/config.json
@@ -4,6 +4,12 @@
         "host": "http://0.0.0.0",
         "port": "5001"
     },
+    "landing-page":{
+        "header":{
+            "title" : "Logan Store" ,
+            "tagline" : "Be a Maverick"
+        }
+    },
     "header": {
         "categories": [
             {
