--- a/web/package.json
+++ b/web/package.json
@@ -34,6 +34,8 @@
     "react-scripts": "5.0.0",
     "react-toastify": "^8.2.0",
     "sass": "^1.49.9",
+    "styled-components": "^5.3.3",
+    "swiper": "^8.0.7",
     "typescript": "^4.6.2",
     "urql": "^2.0.6",
     "uuid": "^8.3.2",
@@ -80,6 +82,7 @@
     "@graphql-codegen/typescript": "2.4.2",
     "@graphql-codegen/typescript-operations": "2.2.2",
     "@graphql-codegen/typescript-react-apollo": "3.2.4",
+    "@types/styled-components": "^5.1.24",
     "@types/uuid": "^8.3.4",
     "babel-loader": "^8.2.3",
     "css-loader": "^6.7.0",
