--- a/web/package.json
+++ b/web/package.json
@@ -32,6 +32,7 @@
     "react-reveal": "^1.2.2",
     "react-router-dom": "6",
     "react-scripts": "5.0.0",
+    "react-spinners": "^0.12.0",
     "react-toastify": "^8.2.0",
     "sass": "^1.49.9",
     "styled-components": "^5.3.3",
