--- a/server/package.json
+++ b/server/package.json
@@ -24,7 +24,9 @@
     "heroku-postbuild": "echo Skip builds on Heroku",
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
-    "test:e2e": "jest --config ./test/jest-e2e.json"
+    "test:e2e": "jest --config ./test/jest-e2e.json",
+    "typeorm": "ts-node -r tsconfig-paths/register ./node_modules/typeorm/cli.js --config src/config/orm.config.ts",
+    "typeorm:migrate": "npm run typeorm migration:generate -- -n"
   },
   "dependencies": {
     "@nestjs/common": "^8.0.0",
