--- a/frontend/src/config/config.json
+++ b/frontend/src/config/config.json
@@ -1,8 +1,13 @@
 {
     "avatar-url": "https://avatars.dicebear.com/api/:sprites/:seed.svg",
     "urql": {
-        "host": "http://0.0.0.0",
-        "port": "5001"
+        "prod" : {
+            "host": "https://test-server777.herokuapp.com"
+        },
+        "development":{
+            "host": "http://0.0.0.0",
+            "port": "5001"
+        }
     },
     "landing-page":{
         "header":{
