--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,7 +5,7 @@ services:
     ports:
       - 5001:5001
     env_file:
-      - ./backend/dev.env
+      - ./backend/.env
   web:
     build: ./frontend
     ports:
