--- a/frontend/package.json
+++ b/frontend/package.json
@@ -28,6 +28,7 @@
     "react-awesome-reveal": "^3.8.1",
     "react-dom": "^17.0.2",
     "react-icons": "^4.3.1",
+    "react-lottie": "^1.2.3",
     "react-redux": "^7.2.6",
     "react-reveal": "^1.2.2",
     "react-router-dom": "6",
@@ -83,6 +84,7 @@
     "@graphql-codegen/typescript": "2.4.2",
     "@graphql-codegen/typescript-operations": "2.2.2",
     "@graphql-codegen/typescript-react-apollo": "3.2.4",
+    "@types/react-lottie": "^1.2.6",
     "@types/styled-components": "^5.1.24",
     "@types/uuid": "^8.3.4",
     "babel-loader": "^8.2.3",
