--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,6 +19,7 @@
     "@urql/exchange-auth": "^0.1.7",
     "@urql/exchange-graphcache": "^4.3.6",
     "add": "^2.0.6",
+    "axios": "^0.27.2",
     "codegen": "^0.1.0",
     "dotenv": "^14.2.0",
     "formik": "^2.2.9",
